--- a/src/config/config.scss
+++ b/src/config/config.scss
@@ -1,6 +1,6 @@
-$main-blue : #49C6E5;
-$main-green : #70AE6E;
-$main-red : #FF5A1F;
-$grey : #6D696A;
-$white : #FFFBFA;
-$black : #090C02;
+$primary-color: #255957;
+$secondary-color: #A98743;
+$tercary-color: #437C90;
+$white: #EEEBD3;
+$main-grey: #CDCBCC;
+$primary-color-text : #122B29;
