--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,7 @@
 @import './config/config';
 @import './components/nav/index';
+@import './components/Homepage/categories/index.scss';
+@import './components/Homepage/formations/formationCard/index.scss';
+@import './components/Homepage/index.scss';
+@import './components/Homepage/formations/formationCard/modal/index.scss';
+
