--- a/src/components/Homepage/index.scss
+++ b/src/components/Homepage/index.scss
@@ -1,22 +1,25 @@
+body{
+    color: $primary-color-text;
+}
 
-.HomepageGlobal {
+.HomepageTabContent {
     display: flex;
     margin: 0px;
-    width: 100%;
-    /* border: solid 1px red; */
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 .categoriesMenu {
-   width: 200px;
+   width: 25%;
 }
 
 .banner{
-    background-color: rgb(42,38,95, 0.5);
+    background-color: $white;
+    opacity: 0.6;
     padding: 20px;
     height: 300px;
-    width: 100%;
     text-align: center;
-    color: white;
+    color: $primary-color;
 }
 
 .banner h2 {
@@ -27,5 +30,4 @@
     margin-top: 50px;
     font-style: italic;
 }
-
 
