--- a/src/components/nav/index.scss
+++ b/src/components/nav/index.scss
@@ -1,14 +1,44 @@
 nav {
   display: block;
   width: 100%;
-  height: 20vh;
-  background-color: $main-blue;
+  height: 15vh;
+  background-color: $secondary-color;
   display: flex;
   align-items: center;
+  
   .user-part{
       width: 70%;
+      margin-left: 20px;
   }
   .auth-part{
       width: 30%;
+  }
+
+  .navItems{
+    margin-left: 10px;
+    text-decoration: none;
+    color : white;
+  }
+
+  .navItems:hover{
+    font-size: 20px;
+    color: $primary-color;
+  }
+
+  .navBtnItems{
+    margin-left: 10px;
+    background-color: $white;
+    color: $primary-color;
+    border: 0;
+    border-radius: 30px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+    font-size: 10px;
+    padding: 12px 20px;
+    letter-spacing: 1px;
+    text-decoration: none;
+  }
+  .navBtnItems:hover{
+    background-color: $primary-color;
+    color : $secondary-color;
   }
 }
