--- a/src/index.scss
+++ b/src/index.scss
@@ -4,4 +4,5 @@
 @import './components/Homepage/formations/formationCard/index.scss';
 @import './components/Homepage/index.scss';
 @import './components/Homepage/formations/formationCard/modal/index.scss';
+@import './pages/index.scss';
 
